# arbor-fork

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  justfile
.github/ISSUE_TEMPLATE/: bug_report.yml  crash_report.yml
.github/workflows/: ci.yml  codspeed.yml  release.yml
crates/arbor-benchmarks/: Cargo.toml
crates/arbor-benchmarks/benches/: embedded_terminal.rs
crates/arbor-cli/: Cargo.toml
crates/arbor-core/: Cargo.toml
crates/arbor-core/src/: agent.rs  daemon.rs  error.rs  id.rs  lib.rs  process.rs  task.rs  theme.rs  worktree.rs
crates/arbor-daemon-client/: Cargo.toml
crates/arbor-daemon-client/src/: lib.rs  types.rs
crates/arbor-gui/: Cargo.toml
crates/arbor-gui/src/: actions.rs  agent_chat.rs  agent_presets.rs  app_bootstrap.rs  app_config.rs  center_panel.rs  changes_pane.rs  command_palette.rs  config_refresh.rs  connection_history.rs  constants.rs  daemon_connection_ui.rs  daemon_runtime.rs  error.rs  external_launchers.rs  git_actions.rs  github_auth_store.rs  github_oauth.rs  github_service.rs  helpers.rs  main.rs  manage_hosts.rs  mdns_browser.rs  prompt_runner.rs  repo_presets.rs  repository_store.rs  settings_ui.rs  sidebar.rs  terminal_backend.rs  terminal_daemon_http.rs  terminal_interaction.rs  terminal_keys.rs  terminal_runtime.rs  theme.rs  types.rs  version_check.rs  workspace_layout.rs  workspace_navigation.rs  worktree_lifecycle.rs
crates/arbor-httpd/: Cargo.toml
crates/arbor-mcp/: Cargo.toml
crates/arbor-symphony/: Cargo.toml
crates/arbor-symphony/src/: codex.rs  domain.rs  lib.rs  service.rs  tracker.rs  workflow.rs  workspace.rs
docs/: http-api-v1.md  mcp.md
docs/src/: automation-and-repo-config.md  getting-started.md  github-agents-and-git.md  index.md  qa-checklist.md  reference-http-api-v1.md  reference-mcp.md  remote-daemon-and-mcp.md  repositories-and-worktrees.md  terminals-diffs-and-files.md  themes-settings-and-notifications.md  workspace-model.md
packaging/macos/: Info.plist
scripts/ci/: check-binary-names.sh  package-linux.sh  package-macos.sh  package-windows.ps1
website/: README.md  index.html  main.js
website/docs/: development.html  index.html  remote-access.html
(+42 files in other folders)
