[package]
edition.workspace = true
license.workspace = true
name = "arbor-benchmarks"
version.workspace = true

[dependencies]
arbor-terminal-emulator = { path = "../arbor-terminal-emulator", features = ["ghostty-vt-experimental"] }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
harness = false
name = "embedded_terminal"

[lints]
workspace = true
