[package]
name = "arbor-core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
ssh = []
mosh = ["ssh"]
vendored-openssl = ["openssl-sys/vendored"]

[dependencies]
config = { workspace = true }
openssl-sys = { workspace = true, optional = true }
git2 = { workspace = true }
gix = { workspace = true }
gix-diff = { workspace = true, features = ["blob-experimental"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
git2 = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
